--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
+    "formidable": "^3.5.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "next-content": "^0.0.0",
+    "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
+    "swagger-ui-dist": "^5.17.14",
+    "swagger-ui-react": "^5.17.14"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "prisma": "^5.14.0",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
